remove env dependencies
